# SmartScale

./: .gitignore  CMakeLists.txt  app.qrc  modbus.md  modbus_protocol.md  start_app.sh  test_watermark  test_watermark.cpp
.codebuddy/memory/: 2026-06-18.md  2026-06-19.md  2026-06-20.md  2026-06-21.md  2026-06-22.md  2026-06-23.md  2026-06-24.md  2026-06-25.md  2026-06-26.md  2026-06-28.md  2026-06-29.md  2026-07-02.md  2026-07-03.md  2026-07-04.md  2026-07-05.md  2026-07-06.md  2026-07-07.md  2026-07-09.md  2026-07-10.md  2026-07-11.md  2026-07-12.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  2026-07-24.md  MEMORY.md
.codebuddy/plans/: history-table-dialog_fe72cfae.md  食材卡片价格输入与9宫格数字键盘_3b96c911.md
.codebuddy/skills/id-type-safety/: SKILL.md
.codebuddy/skills/id-type-safety/references/: id-fields-inventory.md
AI/: labels.txt  mobilenetv3_food.onnx
app/: main.cpp
data/: smartscale.db
deploy/udev/: 99-asr-ml307.rules
docs/: HANDWRITING_INPUT_GUIDE.md  HANDWRITING_QUICKSTART.md  版本记录.md
scripts/: make_update_package.sh  ml307b-net-fix.sh  setup_handwriting.sh  tts_worker.py
src/: version.h.in
src/ai/: VisionAIService.cpp  VisionAIService.h
src/core/: NetworkUtils.cpp  NetworkUtils.h  PState.cpp  PState.h
src/data/: DatabaseManager.cpp  DatabaseManager.h
src/data/models/: HardwareConfig.cpp  HardwareConfig.h  User.cpp  User.h  WeightRecord.cpp  WeightRecord.h
src/data/repositories/: HardwareConfigRepo.cpp  HardwareConfigRepo.h  UserRepo.cpp  UserRepo.h  WeightRecordRepo.cpp  WeightRecordRepo.h
src/hardware/: CameraController.cpp  CameraController.h  VoiceSpeaker.cpp  VoiceSpeaker.h  WeightSensor.cpp  WeightSensor.h  WeightSensorWorker.cpp  WeightSensorWorker.h
src/services/: AppSettingsService.cpp  AppSettingsService.h  AuthService.cpp  AuthService.h  CategoryService.cpp  CategoryService.h  CellularModemService.cpp  CellularModemService.h  MqttClientService.cpp  MqttClientService.h  NetworkManagerService.cpp  NetworkManagerService.h  SystemInfoService.cpp  SystemInfoService.h  UserIngredientService.cpp  UserIngredientService.h  WeightHistoryService.cpp  WeightHistoryService.h
src/ui/: Main.qml  Theme.qml
src/ui/components/: ActionButton.qml  AddIngredientDialog.qml  AlertDialog.qml  BottomStatusBar.qml  CalendarPopup.qml  CellularDialog.qml  DuplicateWeightDialog.qml  FoodItemCard.qml  LoginDialog.qml  LogoutConfirmDialog.qml  NumberPadPopup.qml  RecordDetailDialog.qml  SaveConfirmDialog.qml  SaveLoadingOverlay.qml  SaveSuccessDialog.qml  SettingsDialog.qml  StatusBar.qml  SystemInfoDialog.qml  Toast.qml  WeightRecordSearchDialog.qml  WeightRecordTableDialog.qml  WifiListDialog.qml  WifiPasswordDialog.qml
src/ui/pages/: CategoryCorrectionDialog.qml  FoodSelectPage.qml  LoginPage.qml  SettingsPage.qml  WorkstationPage.qml
src/ui/vkbdstyle/: KeyboardStyle.qml
src/ui/vkbdstyle/light/: style.qml
src/utils/: FoodTranslator.cpp  FoodTranslator.h
